force-app/main/default/objects/Response__c/Response__c.object-meta.xml
<CustomObject>
    <label>Response</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>