force-app/main/default/objects/Response__c/fields/AnswerCorrect__c.field-meta.xml
<CustomField>
    <fullName>AnswerCorrect__c</fullName>
    <formula>IF(Question_Name__r.Correct_Answer__c =  Selected_Answer__c , true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer Correct</label>
    <type>Checkbox</type>
</CustomField>