force-app/main/default/objects/Response__c/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee Name</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>