force-app/main/default/objects/Response__c/fields/Marks_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Marks_Awarded__c</fullName>
    <label>Marks Awarded</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>